--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,13 @@ dependencies:
   # Image handling
   cached_network_image: ^3.4.1
 
+  # Utilities
+  equatable: ^2.0.7
+
+  # Firebase
+  firebase_core: ^3.8.1
+  cloud_firestore: ^5.6.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
