--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,11 @@ dependencies:
   # Utilities
   equatable: ^2.0.7
 
+
+
+  # Local storage
+  shared_preferences: ^2.3.3
+
   # Firebase
   firebase_core: ^3.8.1
   cloud_firestore: ^5.6.1
